fix: revise overflow in favourite coffee

--- a/coffee-house/styles.css
+++ b/coffee-house/styles.css
@@ -7,6 +7,7 @@
 
 html {
     scroll-behavior: smooth;
+    font-size:16px;
 }
 
 body {
@@ -98,7 +99,7 @@ section, .header{
     margin:0;
     padding:0;
     font-family: inter-semibold;
-    font-size:16px;
+    font-size:1rem;
     font-weight:600;
     line-height:150%;
     color:rgba(64, 63, 61, 1);
@@ -127,7 +128,7 @@ section, .header{
 .header-banner__block h1{
     font-family: inter-semibold;
     font-weight: 600;
-    font-size:72px;
+    font-size: 4.5rem;
     line-height: 105%;
     color:rgba(225, 212, 201, 1);
     margin:0;
@@ -137,14 +138,14 @@ section, .header{
 .header-banner__block h1 span{
     font-family: 'Inter', sans-serif;
     font-weight: 600;
-    font-size:72px;
+    font-size: 4.5rem;
     color:rgba(176, 144, 122, 1);
 }
 
 .coffee-description{
     font-family: inter-regular;
     font-weight: 400;
-    font-size:16px;
+    font-size: 1rem;
     line-height: 150%;
     margin:0;
     color:rgba(64, 63, 61, 1);
@@ -179,7 +180,7 @@ section, .header{
 h2, .menu__title{
     font-family: inter-semibold;
     font-weight: 600;
-    font-size:60px;
+    font-size:3.75rem;
     line-height: 125%;
     color:rgba(64, 63, 61, 1);
     margin:0;
@@ -190,7 +191,7 @@ h2, .menu__title{
 h2 span,  .menu__title span{
     font-family: 'Inter', sans-serif;
     font-weight: 600;
-    font-size:60px;
+    font-size:3.75rem;
     color:#B0907A;
 }
 
@@ -213,7 +214,7 @@ h2 span,  .menu__title span{
 h3, .slider-item__price{
     font-family: inter-semibold;
     font-weight: 600;
-    font-size:24px;
+    font-size:1.5rem;
     line-height: 125%;
     color:#403F3D;
     margin:0;
@@ -373,7 +374,7 @@ h3, .slider-item__price{
     margin:0;
     padding:0;
     font-family: inter-semibold;
-    font-size:10px;
+    font-size:0.625rem;
     font-weight:600;
     line-height:140%;
     color:rgba(64, 63, 61, 1);
@@ -517,6 +518,28 @@ footer{
     transform: rotate(45deg) translate(0, 50%);
 }
 
+@media (max-width:1280px){
+    .mobile-app{
+        flex-direction: column;
+        gap:100px;
+        height:auto;
+    }
+
+    .mobile-app__download{
+        padding:0;
+    }
+
+    .text-banners{
+        width:100%;
+        gap:40px;
+    }
+
+    .mobile-image{
+        align-self: center;
+        max-height:630px;
+    }
+}
+
 
 @media (min-width:768px) and (max-width:1002px){
     .menu{
@@ -559,26 +582,6 @@ footer{
 
     .item2, .item3{
         display:none;
-    }
-
-    .mobile-app{
-        flex-direction: column;
-        gap:100px;
-        height:auto;
-    }
-
-    .mobile-app__download{
-        padding:0;
-    }
-
-    .text-banners{
-        width:100%;
-        gap:40px;
-    }
-
-    .mobile-image{
-        align-self: center;
-        max-height:630px;
     }
 
     .contacts{
@@ -626,7 +629,7 @@ footer{
     }
 
     .nav-list__wrapper.open .link-btn {
-        font-size: 32px;
+        font-size: 2rem;
         line-height: 125%;
         text-align: center;
     }
@@ -685,6 +688,10 @@ footer{
     .menu__item:hover:after {
         width:100%;
     }
+
+    .burger:hover{
+        cursor: pointer;
+    }
    
     .left-arrow:hover, .right-arrow:hover,
     .load-more:hover {
@@ -741,16 +748,11 @@ footer{
         gap:0;
     }
 
-    .header-banner__block h1{
-        font-size:42px;
-        line-height: 48.3px;
+    .header-banner__block h1, .header-banner__block h1 span{
+        font-size:2.625rem;
+        line-height: 3.019rem;
     }
     
-    .header-banner__block h1 span{
-        font-size:42px;
-        line-height: 48.3px;
-    }
-
     .header__banner{
         padding:60px 16px;
         max-height:552px;
@@ -766,7 +768,7 @@ footer{
     }
 
     h2, h2 span,  .menu__title,  .menu__title span{
-      font-size:32px;
+      font-size: 2rem;
       margin:0;
       padding:0;
     }
@@ -814,6 +816,19 @@ footer{
         justify-content: center;
     }
 
+
+}
+
+@media (max-width:400px){
+    .favourite-coffee{
+        justify-content: center;
+        max-width:348px;
+    }
+
+    .slider-item__img{
+       width:100%;
+       height:100%;
+    }
 }
 
 /* burger */
